* Bug #38658: adjusted class selecotrs for GalleryItems on mobile devices
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-2@61102 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
@@ -119,8 +119,9 @@
 		}
 	}
 
+	.umcGalleryItem.touched,
 	.umcGalleryItemActive,
-	.umcGalleryItem:hover {
+	.umcGalleryItem.noTouch:hover {
 		cursor: pointer;
 		.umcGalleryCategoryFavorite {
 			background-color: #ffffff!important;
